--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 window.open('https://i.postimg.cc/MpnN2jvZ/neutral-face.png')
     }
     </script>
-        <h1>Press <a><img height="23" width="23" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/twitter/259/neutral-face_1f610.png"onclick="paga()"></a> to pay BombyX113</h1>
+        <h1>Press <a href="#PAGAH"><img height="23" width="23" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/twitter/259/neutral-face_1f610.png"onclick="paga()"></a> to pay BombyX113</h1>
         
     </body>
 </html>
